[project]
name = "llm-token-sampling-demo"
version = "0.1.0"
description = "Basic token probability visualiser web app"
authors = [{ name = "Joseph Bolton", email = "joseph.jazz.bolton@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi[standard]>=0.115.12",
  "matplotlib>=3.10.1",
  "openai>=1.69.0",
  "python-dotenv>=1.1.0",
]
